--- a/.pylintrc
+++ b/.pylintrc
@@ -1,5 +1,7 @@
 [MESSAGES CONTROL]
-disable=global-statement,
+disable=file-ignored,
+        fixme,
+        global-statement,
         import-error,
         invalid-name,
         locally-disabled,
