Add command-line arguments for audio recording options

--- a/.pylintrc
+++ b/.pylintrc
@@ -11,7 +11,8 @@ disable=fixme,
         too-many-locals
 
 [TYPECHECK]
-ignored-modules=cv2
+ignored-modules=cv2,
+                alsaaudio
 
 [REPORTS]
 reports=yes
