Revert "Fix pylint warnings."
This reverts commit 761ec73c8920812bcfa746d58c3ff4dc347e9342.

--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,5 @@
 [MESSAGES CONTROL]
-disable=duplicate-code,
-        fixme,
+disable=fixme,
         global-statement,
         import-error,
         invalid-name,
