Revert "Add command-line arguments for audio recording options"
This reverts commit 5459c9c6b14afc02fc8efa6527a52219b0e5ed22.

--- a/.pylintrc
+++ b/.pylintrc
@@ -11,8 +11,7 @@ disable=fixme,
         too-many-locals
 
 [TYPECHECK]
-ignored-modules=cv2,
-                alsaaudio
+ignored-modules=cv2
 
 [REPORTS]
 reports=yes
